@@ -6,6 +6,7 @@ Changes relative to tre-0.19:
   * REF: New functions to look up from alists, arrays, hash
     tables and objects.  Not settable (yet).
   * ENSURE-LIST: Do not put NIL into a list.
+  * ENSURE-ARRAY: New function to convert lists into arrays.
 
 Changes of tre-0.19 relative to tre-0.18:
   * Bug-fix: jump tag optimizer translated any number.
